programming-language/workspace/compiler/tests/snapshots/snapshots_test__codegen_minimal.snap
---
source: tests/snapshots_test.rs
expression: format_hex_dump(&code)
---
Total bytes: 2424

0000: 0C 08 0A 00 9E 20 32 30  36 32 00 00 00 D8 4C 71  |..... 2062....Lq|
0010: 11 A0 00 B1 22 F0 07 20  D2 FF C8 4C 14 08 60 A2  |....".. ...L..`.|
0020: 64 20 96 0B 86 02 A8 8A  A2 0A 20 96 0B 85 02 86  |d ........ .....|
0030: 04 98 F0 0B 18 69 30 20  D2 FF A5 02 4C 44 08 A5  |.....i0 ....LD..|
0040: 02 F0 06 18 69 30 20 D2  FF A5 04 18 69 30 20 D2  |....i0 .....i0 .|
0050: FF 60 85 22 86 23 E0 00  D0 04 20 20 08 60 A9 00  |.`.".#....  .`..|
0060: 85 02 A9 10 85 FD A9 27  85 FE 20 98 08 A9 E8 85  |.......'.. .....|
0070: FD A9 03 85 FE 20 98 08  A9 64 85 FD A9 00 85 FE  |..... ...d......|
0080: 20 98 08 A9 0A 85 FD A9  00 85 FE 20 98 08 A5 22  | .......... ..."|
0090: 18 69 30 20 D2 FF 60 A2  00 A5 23 C5 FE 90 19 D0  |.i0 ..`...#.....|
00A0: 06 A5 22 C5 FD 90 11 A5  22 38 E5 FD 85 22 A5 23  |.."....."8...".#|
00B0: E5 FE 85 23 E8 4C 9A 08  E0 00 D0 04 A5 02 F0 0B  |...#.L..........|
00C0: 8A 18 69 30 20 D2 FF A9  01 85 02 60 C9 00 F0 15  |..i0 ......`....|
00D0: A9 54 20 D2 FF A9 52 20  D2 FF A9 55 20 D2 FF A9  |.T ...R ...U ...|
00E0: 45 20 D2 FF 60 A9 46 20  D2 FF A9 41 20 D2 FF A9  |E ..`.F ...A ...|
00F0: 4C 20 D2 FF A9 53 20 D2  FF A9 45 20 D2 FF 60 C9  |L ...S ...E ..`.|
0100: 80 90 0C 48 A9 2D 20 D2  FF 68 49 FF 18 69 01 20  |...H.- ..hI..i. |
0110: 20 08 60 85 22 86 23 8A  C9 80 90 16 A9 2D 20 D2  | .`.".#......- .|
0120: FF A5 22 49 FF 18 69 01  85 22 A5 23 49 FF 69 00  |.."I..i..".#I.i.|
0130: 85 23 A5 22 A6 23 20 53  08 60 85 22 86 23 8A 29  |.#.".# S.`.".#.)|
0140: 80 F0 16 A9 2D 20 D2 FF  A5 22 49 FF 18 69 01 85  |....- ..."I..i..|
0150: 22 A5 23 49 FF 69 00 85  23 A5 23 4A 85 03 A5 22  |".#I.i..#.#J..."|
0160: 6A 85 02 46 03 66 02 46  03 66 02 46 03 66 02 A5  |j..F.f.F.f.F.f..|
0170: 22 29 0F 48 A5 02 A6 03  20 53 08 A9 2E 20 D2 FF  |").H.... S... ..|
0180: 68 85 02 A9 00 85 22 85  23 A5 02 F0 4C A5 02 29  |h.....".#...L..)|
0190: 01 F0 0D 18 A5 22 69 71  85 22 A5 23 69 02 85 23  |....."iq.".#i..#|
01A0: A5 02 29 02 F0 0D 18 A5  22 69 E2 85 22 A5 23 69  |..)....."i..".#i|
01B0: 04 85 23 A5 02 29 04 F0  0D 18 A5 22 69 C4 85 22  |..#..)....."i.."|
01C0: A5 23 69 09 85 23 A5 02  29 08 F0 0D 18 A5 22 69  |.#i..#..)....."i|
01D0: 88 85 22 A5 23 69 13 85  23 A5 22 A6 23 20 E2 09  |..".#i..#.".# ..|
01E0: 60 85 02 86 03 A0 00 A5  03 C9 03 90 19 D0 06 A5  |`...............|
01F0: 02 C9 E8 90 11 38 A5 02  E9 E8 85 02 A5 03 E9 03  |.....8..........|
0200: 85 03 C8 4C E8 09 98 18  69 30 20 D2 FF A0 00 A5  |...L....i0 .....|
0210: 03 D0 06 A5 02 C9 64 90  11 38 A5 02 E9 64 85 02  |......d..8...d..|
0220: A5 03 E9 00 85 03 C8 4C  10 0A 98 18 69 30 20 D2  |.......L....i0 .|
0230: FF A0 00 A5 02 C9 0A 90  09 38 E9 0A 85 02 C8 4C  |.........8.....L|
0240: 34 0A 98 18 69 30 20 D2  FF A5 02 18 69 30 20 D2  |4...i0 .....i0 .|
0250: FF 60 85 22 86 23 8A 4A  4A 29 1F 85 02 C9 1F D0  |.`.".#.JJ)......|
0260: 41 A5 23 29 03 05 22 D0  29 A5 23 30 10 A9 49 20  |A.#)..".).#0..I |
0270: D2 FF A9 4E 20 D2 FF A9  46 20 D2 FF 60 A9 2D 20  |...N ...F ..`.- |
0280: D2 FF A9 49 20 D2 FF A9  4E 20 D2 FF A9 46 20 D2  |...I ...N ...F .|
0290: FF 60 A9 4E 20 D2 FF A9  41 20 D2 FF A9 4E 20 D2  |.`.N ...A ...N .|
02A0: FF 60 A5 02 D0 31 A5 23  29 03 05 22 D0 19 A5 23  |.`...1.#).."...#|
02B0: 10 05 A9 2D 20 D2 FF A9  30 20 D2 FF A9 2E 20 D2  |...- ...0 .... .|
02C0: FF A9 30 20 D2 FF 60 A9  30 20 D2 FF A9 2E 20 D2  |..0 ..`.0 .... .|
02D0: FF A9 30 20 D2 FF 60 A5  23 10 0B A9 2D 20 D2 FF  |..0 ..`.#...- ..|
02E0: A5 23 29 7F 85 23 A5 22  A6 23 20 04 0F 20 53 08  |.#)..#.".# .. S.|
02F0: A9 2E 20 D2 FF A9 30 20  D2 FF 60 A0 00 B1 22 F0  |.. ...0 ..`...".|
0300: 03 C8 D0 F9 98 60 A9 00  85 04 A0 00 B1 22 F0 0B  |.....`......."..|
0310: A6 04 9D 00 C2 C8 E6 04  4C 0D 0B A0 00 B1 02 A6  |........L.......|
0320: 04 9D 00 C2 F0 06 C8 E6  04 4C 1E 0B A9 00 A2 C2  |.........L......|
0330: 85 22 86 23 60 85 22 86  FD A9 00 85 23 A2 08 0A  |.".#`.".....#...|
0340: 26 23 06 22 90 07 18 65  FD 90 02 E6 23 CA D0 EF  |&#."...e....#...|
0350: A6 23 60 20 36 0B 60 85  22 86 FD A9 00 85 02 A5  |.#` 6.`.".......|
0360: 22 10 09 49 FF 18 69 01  85 22 E6 02 A5 FD 10 09  |"..I..i.."......|
0370: 49 FF 18 69 01 85 FD C6  02 A5 22 A6 FD 20 36 0B  |I..i......".. 6.|
0380: 85 22 A5 02 F0 08 A5 22  49 FF 18 69 01 60 A5 22  |."....."I..i.`."|
0390: 60 20 58 0B 60 E0 00 D0  05 A9 00 A2 00 60 85 22  |` X.`........`."|
03A0: 86 FD A9 00 85 23 A5 22  C5 FD 90 08 38 E5 FD E6  |.....#."....8...|
03B0: 23 4C A9 0B AA A5 23 60  20 96 0B 60 85 22 86 FD  |#L....#` ..`."..|
03C0: A9 00 85 02 85 04 A5 22  10 0B 49 FF 18 69 01 85  |......."..I..i..|
03D0: 22 E6 02 E6 04 A5 FD 10  0D 49 FF 18 69 01 85 FD  |"........I..i...|
03E0: A5 02 49 01 85 02 A5 22  A6 FD 20 96 0B 85 22 86  |..I....".. ...".|
03F0: FD A5 02 F0 09 A5 22 49  FF 18 69 01 85 22 A5 04  |......"I..i.."..|
0400: F0 09 A5 FD 49 FF 18 69  01 85 FD A5 22 A6 FD 60  |....I..i...."..`|
0410: 20 BD 0B 60 A5 02 85 22  A5 03 85 23 20 92 0B 85  | ..`..."...# ...|
0420: 02 86 03 A0 04 A5 03 C9  80 66 03 66 02 88 D0 F5  |.........f.f....|
0430: A5 02 A6 03 60 A5 02 85  22 A5 03 85 23 A0 04 06  |....`..."...#...|
0440: 22 26 23 88 D0 F9 20 11  0C 60 20 11 0C 60 A5 03  |"&#... ..` ..`..|
0450: 38 E5 23 50 02 49 80 30  0D D0 0D A5 02 C5 22 90  |8.#P.I.0......".|
0460: 05 A9 00 4C 69 0C A9 01  60 A5 03 38 E5 23 50 02  |...Li...`..8.#P.|
0470: 49 80 30 0F D0 0F A5 02  C5 22 90 07 F0 05 A9 00  |I.0......"......|
0480: 4C 86 0C A9 01 60 20 6A  0C 49 01 60 20 4F 0C 49  |L....` j.I.` O.I|
0490: 01 60 A5 22 05 23 29 7F  F0 0B A5 02 05 03 29 7F  |.`.".#).......).|
04A0: F0 0A 4C B4 0C A5 02 A6  03 4C F2 0C A5 22 A6 23  |..L......L...".#|
04B0: 4C F2 0C A5 23 4A 4A 29  1F 85 FD A5 03 4A 4A 29  |L...#JJ).....JJ)|
04C0: 1F 85 FE A5 FD C5 FE F0  05 B0 E1 4C A6 0C A5 23  |...........L...#|
04D0: 29 80 85 04 A5 03 29 80  C5 04 F0 07 A5 22 A6 23  |).....)......".#|
04E0: 4C F2 0C 18 A5 22 65 02  85 04 A5 23 65 03 AA A5  |L...."e....#e...|
04F0: 04 60 A5 03 49 80 85 03  20 93 0C 60 A5 22 05 23  |.`..I... ..`.".#|
0500: 29 7F F0 42 A5 02 05 03  29 7F F0 3A A5 23 45 03  |)..B....)..:.#E.|
0510: 29 80 85 05 A5 23 4A 4A  29 1F 85 FD A5 03 4A 4A  |)....#JJ).....JJ|
0520: 29 1F 18 65 FD 38 E9 0F  30 1C C9 1F 90 0A A5 05  |)..e.8..0.......|
0530: 09 7C AA A9 00 4C 4B 0D  85 FD A5 FD 0A 0A 05 05  |.|...LK.........|
0540: AA A5 22 4C 4B 0D A9 00  A2 00 60 A5 22 05 23 29  |.."LK.....`.".#)|
0550: 7F F0 3C A5 02 05 03 29  7F F0 3B A5 23 45 03 29  |..<....)..;.#E.)|
0560: 80 85 05 A5 23 4A 4A 29  1F 85 FD A5 03 4A 4A 29  |....#JJ).....JJ)|
0570: 1F 85 FE A5 FD 38 E5 FE  18 69 0F 30 12 C9 1F B0  |.....8...i.0....|
0580: 15 85 FD A5 FD 0A 0A 05  05 AA A5 22 4C 9E 0D A9  |..........."L...|
0590: 00 A2 00 4C 9E 0D A5 05  09 7C AA A9 00 60 A5 02  |...L.....|...`..|
05A0: 05 03 29 7F F0 30 A5 23  29 80 85 05 A5 23 29 7F  |..)..0.#)....#).|
05B0: 85 23 A5 03 29 7F 85 03  A5 23 C5 03 90 1D D0 06  |.#..)....#......|
05C0: A5 22 C5 02 90 15 20 F3  0C 85 22 86 23 A5 23 29  |.".... ...".#.#)|
05D0: 7F 85 23 4C B9 0D A9 00  A2 00 60 A5 23 05 05 AA  |..#L......`.#...|
05E0: A5 22 60 48 8A 49 80 AA  68 60 A5 23 45 03 30 26  |."`H.I..h`.#E.0&|
05F0: A5 23 30 11 A5 23 C5 03  90 1C D0 1F A5 22 C5 02  |.#0..#......."..|
0600: 90 14 4C 1C 0E A5 03 C5  23 90 0B D0 0E A5 02 C5  |..L.....#.......|
0610: 22 90 03 4C 1C 0E A9 01  4C 1E 0E A9 00 60 A5 22  |"..L....L....`."|
0620: C5 02 D0 09 A5 23 C5 03  D0 03 A9 01 60 20 EB 0D  |.....#......` ..|
0630: 60 20 1F 0E 49 01 60 20  EB 0D 49 01 60 A5 22 C5  |` ..I.` ..I.`.".|
0640: 02 D0 09 A5 23 C5 03 D0  03 A9 01 60 A9 00 60 20  |....#......`..` |
0650: 3E 0E 49 01 60 C9 00 D0  05 A9 00 A2 00 60 85 22  |>.I.`........`."|
0660: A2 00 A0 16 A5 22 29 80  D0 0C 06 22 88 C0 00 D0  |.....")...."....|
0670: F3 A9 00 A2 00 60 98 0A  0A AA A5 22 29 7F 4A 4A  |.....`.....").JJ|
0680: 4A 85 02 8A 05 02 AA A5  22 0A 0A 0A 60 85 22 86  |J......."...`.".|
0690: 23 05 23 D0 05 A9 00 A2  00 60 A0 1E A5 23 29 80  |#.#......`...#).|
06A0: D0 0E 06 22 26 23 88 C0  00 D0 F1 A9 00 A2 00 60  |..."&#.........`|
06B0: 98 0A 0A 85 02 A5 23 29  60 4A 4A 4A 4A 4A 05 02  |......#)`JJJJJ..|
06C0: AA A5 23 29 1F 0A 0A 0A  85 02 A5 22 4A 4A 4A 4A  |..#)......."JJJJ|
06D0: 4A 05 02 60 85 22 86 23  8A 4A 4A 29 1F C9 0F B0  |J..`.".#.JJ)....|
06E0: 03 A9 00 60 38 E9 0F A8  C0 08 90 03 A9 FF 60 A5  |...`8.........`.|
06F0: 23 29 03 09 04 85 02 C0  00 F0 05 06 02 88 D0 FB  |#)..............|
0700: A5 02 60 85 22 86 23 8A  4A 4A 29 1F 85 FD C9 0F  |..`.".#.JJ).....|
0710: B0 05 A9 00 A2 00 60 A5  23 29 03 09 04 85 03 A5  |......`.#)......|
0720: 22 85 02 A5 FD C9 19 B0  12 A9 19 38 E5 FD A8 C0  |"..........8....|
0730: 00 F0 23 46 03 66 02 88  4C 30 0F A5 FD 38 E9 19  |..#F.f..L0...8..|
0740: A8 C0 06 90 05 A9 FF A2  FF 60 C0 00 F0 08 06 02  |.........`......|
0750: 26 03 88 4C 4B 0F A5 02  A6 03 60 85 22 86 23 05  |&..LK.....`.".#.|
0760: 23 D0 05 A9 00 A2 00 60  A5 23 29 80 85 05 10 11  |#......`.#).....|
0770: A5 22 49 FF 18 69 01 85  22 A5 23 49 FF 69 00 85  |."I..i..".#I.i..|
0780: 23 A0 1A A5 23 29 80 D0  0E 06 22 26 23 88 C0 00  |#...#)...."&#...|
0790: D0 F1 A9 00 A2 00 60 98  0A 0A 85 02 A5 23 29 60  |......`......#)`|
07A0: 4A 4A 4A 4A 4A 05 02 05  05 AA A5 23 29 1F 0A 0A  |JJJJJ......#)...|
07B0: 0A 85 02 A5 22 4A 4A 4A  4A 4A 05 02 60 85 22 86  |...."JJJJJ..`.".|
07C0: 23 8A 29 80 85 05 A5 23  4A 4A 29 1F C9 0B B0 05  |#.)....#JJ).....|
07D0: A9 00 A2 00 60 C9 1B 90  0E A5 05 30 05 A9 FF A2  |....`......0....|
07E0: 7F 60 A9 00 A2 80 60 38  E9 0B A8 A5 23 29 03 09  |.`....`8....#)..|
07F0: 04 85 03 A5 22 85 02 C0  00 F0 07 06 02 26 03 88  |...."........&..|
0800: D0 F9 A5 05 10 11 A5 02  49 FF 18 69 01 85 02 A5  |........I..i....|
0810: 03 49 FF 69 00 85 03 A5  02 A6 03 60 A2 00 4C 22  |.I.i.......`..L"|
0820: 10 85 22 86 23 A9 4B 85  FD A9 03 85 FE A9 00 A0  |..".#.K.........|
0830: 00 91 FD A5 22 05 23 D0  09 C6 FD A9 30 91 FD 4C  |....".#.....0..L|
0840: 55 10 20 5A 10 18 69 30  C6 FD A0 00 91 FD A5 22  |U. Z..i0......."|
0850: 05 23 D0 EE A5 FD A6 FE  60 A9 00 A2 10 06 22 26  |.#......`....."&|
0860: 23 2A C9 0A 90 04 E9 0A  E6 22 CA D0 F0 60 A2 00  |#*......."...`..|
0870: 4C 22 10 20 78 10 60 85  FD 86 FE A9 00 85 22 85  |L". x.`.......".|
0880: 23 A0 00 B1 FD C9 20 D0  03 C8 D0 F7 B1 FD C9 30  |#..... ........0|
0890: 90 3F C9 3A B0 3B 38 E9  30 48 A5 22 85 02 A5 23  |.?.:.;8.0H."...#|
08A0: 85 03 06 22 26 23 A5 22  48 A5 23 48 06 22 26 23  |..."&#."H.#H."&#|
08B0: 06 22 26 23 68 85 03 68  18 65 22 85 22 A5 03 65  |."&#h..h.e"."..e|
08C0: 23 85 23 68 18 65 22 85  22 90 02 E6 23 C8 4C 8D  |#.#h.e"."...#.L.|
08D0: 10 A5 22 A6 23 60 85 22  86 23 A5 23 C9 80 66 23  |..".#`.".#.#..f#|
08E0: 66 22 A5 23 C9 80 66 23  66 22 A5 23 C9 80 66 23  |f".#..f#f".#..f#|
08F0: 66 22 A5 23 C9 80 66 23  66 22 A5 22 A6 23 4C 22  |f".#..f#f".".#L"|
0900: 10 20 BE 0F 4C D7 10 A9  00 85 02 20 CF FF C9 0D  |. ..L...... ....|
0910: F0 0C A4 02 99 00 C1 C8  84 02 C0 FF 90 ED A4 02  |................|
0920: A9 00 99 00 C1 A9 00 A2  C1 60 A9 FF 8D 0E D4 8D  |.........`......|
0930: 0F D4 A9 80 8D 12 D4 AD  1B D4 4D 04 DC 4D 12 D0  |..........M..M..|
0940: 85 06 AD 1B D4 4D 05 DC  85 07 05 06 D0 08 A9 AC  |.....M..........|
0950: 85 06 A9 E1 85 07 60 A5  06 0A 26 07 90 02 49 2D  |......`...&...I-|
0960: 85 06 4D 1B D4 60 20 58  11 4A 4A 4A 4A A2 00 60  |..M..` X.JJJJ..`|
0970: 20 75 11 60 20 2B 11 60                           | u.` +.`|
