programming-language/workspace/compiler/tests/snapshots/snapshots_test__codegen_variables.snap
---
source: tests/snapshots_test.rs
expression: format_hex_dump(&code)
---
Total bytes: 2235

0000: 0C 08 0A 00 9E 20 32 30  36 32 00 00 00 4C 85 10  |..... 2062...L..|
0010: A0 00 B1 22 F0 07 20 D2  FF C8 4C 13 08 60 A2 64  |...".. ...L..`.d|
0020: 20 95 0B 86 02 A8 8A A2  0A 20 95 0B 85 02 86 04  | ........ ......|
0030: 98 F0 0B 18 69 30 20 D2  FF A5 02 4C 43 08 A5 02  |....i0 ....LC...|
0040: F0 06 18 69 30 20 D2 FF  A5 04 18 69 30 20 D2 FF  |...i0 .....i0 ..|
0050: 60 85 22 86 23 E0 00 D0  04 20 1F 08 60 A9 00 85  |`.".#.... ..`...|
0060: 02 A9 10 85 FD A9 27 85  FE 20 97 08 A9 E8 85 FD  |......'.. ......|
0070: A9 03 85 FE 20 97 08 A9  64 85 FD A9 00 85 FE 20  |.... ...d...... |
0080: 97 08 A9 0A 85 FD A9 00  85 FE 20 97 08 A5 22 18  |.......... ...".|
0090: 69 30 20 D2 FF 60 A2 00  A5 23 C5 FE 90 19 D0 06  |i0 ..`...#......|
00A0: A5 22 C5 FD 90 11 A5 22  38 E5 FD 85 22 A5 23 E5  |."....."8...".#.|
00B0: FE 85 23 E8 4C 99 08 E0  00 D0 04 A5 02 F0 0B 8A  |..#.L...........|
00C0: 18 69 30 20 D2 FF A9 01  85 02 60 C9 00 F0 15 A9  |.i0 ......`.....|
00D0: 54 20 D2 FF A9 52 20 D2  FF A9 55 20 D2 FF A9 45  |T ...R ...U ...E|
00E0: 20 D2 FF 60 A9 46 20 D2  FF A9 41 20 D2 FF A9 4C  | ..`.F ...A ...L|
00F0: 20 D2 FF A9 53 20 D2 FF  A9 45 20 D2 FF 60 C9 80  | ...S ...E ..`..|
0100: 90 0C 48 A9 2D 20 D2 FF  68 49 FF 18 69 01 20 1F  |..H.- ..hI..i. .|
0110: 08 60 85 22 86 23 8A C9  80 90 16 A9 2D 20 D2 FF  |.`.".#......- ..|
0120: A5 22 49 FF 18 69 01 85  22 A5 23 49 FF 69 00 85  |."I..i..".#I.i..|
0130: 23 A5 22 A6 23 20 52 08  60 85 22 86 23 8A 29 80  |#.".# R.`.".#.).|
0140: F0 16 A9 2D 20 D2 FF A5  22 49 FF 18 69 01 85 22  |...- ..."I..i.."|
0150: A5 23 49 FF 69 00 85 23  A5 23 4A 85 03 A5 22 6A  |.#I.i..#.#J..."j|
0160: 85 02 46 03 66 02 46 03  66 02 46 03 66 02 A5 22  |..F.f.F.f.F.f.."|
0170: 29 0F 48 A5 02 A6 03 20  52 08 A9 2E 20 D2 FF 68  |).H.... R... ..h|
0180: 85 02 A9 00 85 22 85 23  A5 02 F0 4C A5 02 29 01  |.....".#...L..).|
0190: F0 0D 18 A5 22 69 71 85  22 A5 23 69 02 85 23 A5  |...."iq.".#i..#.|
01A0: 02 29 02 F0 0D 18 A5 22  69 E2 85 22 A5 23 69 04  |.)....."i..".#i.|
01B0: 85 23 A5 02 29 04 F0 0D  18 A5 22 69 C4 85 22 A5  |.#..)....."i..".|
01C0: 23 69 09 85 23 A5 02 29  08 F0 0D 18 A5 22 69 88  |#i..#..)....."i.|
01D0: 85 22 A5 23 69 13 85 23  A5 22 A6 23 20 E1 09 60  |.".#i..#.".# ..`|
01E0: 85 02 86 03 A0 00 A5 03  C9 03 90 19 D0 06 A5 02  |................|
01F0: C9 E8 90 11 38 A5 02 E9  E8 85 02 A5 03 E9 03 85  |....8...........|
0200: 03 C8 4C E7 09 98 18 69  30 20 D2 FF A0 00 A5 03  |..L....i0 ......|
0210: D0 06 A5 02 C9 64 90 11  38 A5 02 E9 64 85 02 A5  |.....d..8...d...|
0220: 03 E9 00 85 03 C8 4C 0F  0A 98 18 69 30 20 D2 FF  |......L....i0 ..|
0230: A0 00 A5 02 C9 0A 90 09  38 E9 0A 85 02 C8 4C 33  |........8.....L3|
0240: 0A 98 18 69 30 20 D2 FF  A5 02 18 69 30 20 D2 FF  |...i0 .....i0 ..|
0250: 60 85 22 86 23 8A 4A 4A  29 1F 85 02 C9 1F D0 41  |`.".#.JJ)......A|
0260: A5 23 29 03 05 22 D0 29  A5 23 30 10 A9 49 20 D2  |.#)..".).#0..I .|
0270: FF A9 4E 20 D2 FF A9 46  20 D2 FF 60 A9 2D 20 D2  |..N ...F ..`.- .|
0280: FF A9 49 20 D2 FF A9 4E  20 D2 FF A9 46 20 D2 FF  |..I ...N ...F ..|
0290: 60 A9 4E 20 D2 FF A9 41  20 D2 FF A9 4E 20 D2 FF  |`.N ...A ...N ..|
02A0: 60 A5 02 D0 31 A5 23 29  03 05 22 D0 19 A5 23 10  |`...1.#).."...#.|
02B0: 05 A9 2D 20 D2 FF A9 30  20 D2 FF A9 2E 20 D2 FF  |..- ...0 .... ..|
02C0: A9 30 20 D2 FF 60 A9 30  20 D2 FF A9 2E 20 D2 FF  |.0 ..`.0 .... ..|
02D0: A9 30 20 D2 FF 60 A5 23  10 0B A9 2D 20 D2 FF A5  |.0 ..`.#...- ...|
02E0: 23 29 7F 85 23 A5 22 A6  23 20 03 0F 20 52 08 A9  |#)..#.".# .. R..|
02F0: 2E 20 D2 FF A9 30 20 D2  FF 60 A0 00 B1 22 F0 03  |. ...0 ..`..."..|
0300: C8 D0 F9 98 60 A9 00 85  04 A0 00 B1 22 F0 0B A6  |....`......."...|
0310: 04 9D 00 C2 C8 E6 04 4C  0C 0B A0 00 B1 02 A6 04  |.......L........|
0320: 9D 00 C2 F0 06 C8 E6 04  4C 1D 0B A9 00 A2 C2 85  |........L.......|
0330: 22 86 23 60 85 22 86 FD  A9 00 85 23 A2 08 0A 26  |".#`.".....#...&|
0340: 23 06 22 90 07 18 65 FD  90 02 E6 23 CA D0 EF A6  |#."...e....#....|
0350: 23 60 20 35 0B 60 85 22  86 FD A9 00 85 02 A5 22  |#` 5.`."......."|
0360: 10 09 49 FF 18 69 01 85  22 E6 02 A5 FD 10 09 49  |..I..i.."......I|
0370: FF 18 69 01 85 FD C6 02  A5 22 A6 FD 20 35 0B 85  |..i......".. 5..|
0380: 22 A5 02 F0 08 A5 22 49  FF 18 69 01 60 A5 22 60  |"....."I..i.`."`|
0390: 20 57 0B 60 E0 00 D0 05  A9 00 A2 00 60 85 22 86  | W.`........`.".|
03A0: FD A9 00 85 23 A5 22 C5  FD 90 08 38 E5 FD E6 23  |....#."....8...#|
03B0: 4C A8 0B AA A5 23 60 20  95 0B 60 85 22 86 FD A9  |L....#` ..`."...|
03C0: 00 85 02 85 04 A5 22 10  0B 49 FF 18 69 01 85 22  |......"..I..i.."|
03D0: E6 02 E6 04 A5 FD 10 0D  49 FF 18 69 01 85 FD A5  |........I..i....|
03E0: 02 49 01 85 02 A5 22 A6  FD 20 95 0B 85 22 86 FD  |.I....".. ..."..|
03F0: A5 02 F0 09 A5 22 49 FF  18 69 01 85 22 A5 04 F0  |....."I..i.."...|
0400: 09 A5 FD 49 FF 18 69 01  85 FD A5 22 A6 FD 60 20  |...I..i...."..` |
0410: BC 0B 60 A5 02 85 22 A5  03 85 23 20 91 0B 85 02  |..`..."...# ....|
0420: 86 03 A0 04 A5 03 C9 80  66 03 66 02 88 D0 F5 A5  |........f.f.....|
0430: 02 A6 03 60 A5 02 85 22  A5 03 85 23 A0 04 06 22  |...`..."...#..."|
0440: 26 23 88 D0 F9 20 10 0C  60 20 10 0C 60 A5 03 38  |&#... ..` ..`..8|
0450: E5 23 50 02 49 80 30 0D  D0 0D A5 02 C5 22 90 05  |.#P.I.0......"..|
0460: A9 00 4C 68 0C A9 01 60  A5 03 38 E5 23 50 02 49  |..Lh...`..8.#P.I|
0470: 80 30 0F D0 0F A5 02 C5  22 90 07 F0 05 A9 00 4C  |.0......"......L|
0480: 85 0C A9 01 60 20 69 0C  49 01 60 20 4E 0C 49 01  |....` i.I.` N.I.|
0490: 60 A5 22 05 23 29 7F F0  0B A5 02 05 03 29 7F F0  |`.".#).......)..|
04A0: 0A 4C B3 0C A5 02 A6 03  4C F1 0C A5 22 A6 23 4C  |.L......L...".#L|
04B0: F1 0C A5 23 4A 4A 29 1F  85 FD A5 03 4A 4A 29 1F  |...#JJ).....JJ).|
04C0: 85 FE A5 FD C5 FE F0 05  B0 E1 4C A5 0C A5 23 29  |..........L...#)|
04D0: 80 85 04 A5 03 29 80 C5  04 F0 07 A5 22 A6 23 4C  |.....)......".#L|
04E0: F1 0C 18 A5 22 65 02 85  04 A5 23 65 03 AA A5 04  |...."e....#e....|
04F0: 60 A5 03 49 80 85 03 20  92 0C 60 A5 22 05 23 29  |`..I... ..`.".#)|
0500: 7F F0 42 A5 02 05 03 29  7F F0 3A A5 23 45 03 29  |..B....)..:.#E.)|
0510: 80 85 05 A5 23 4A 4A 29  1F 85 FD A5 03 4A 4A 29  |....#JJ).....JJ)|
0520: 1F 18 65 FD 38 E9 0F 30  1C C9 1F 90 0A A5 05 09  |..e.8..0........|
0530: 7C AA A9 00 4C 4A 0D 85  FD A5 FD 0A 0A 05 05 AA  ||...LJ..........|
0540: A5 22 4C 4A 0D A9 00 A2  00 60 A5 22 05 23 29 7F  |."LJ.....`.".#).|
0550: F0 3C A5 02 05 03 29 7F  F0 3B A5 23 45 03 29 80  |.<....)..;.#E.).|
0560: 85 05 A5 23 4A 4A 29 1F  85 FD A5 03 4A 4A 29 1F  |...#JJ).....JJ).|
0570: 85 FE A5 FD 38 E5 FE 18  69 0F 30 12 C9 1F B0 15  |....8...i.0.....|
0580: 85 FD A5 FD 0A 0A 05 05  AA A5 22 4C 9D 0D A9 00  |.........."L....|
0590: A2 00 4C 9D 0D A5 05 09  7C AA A9 00 60 A5 02 05  |..L.....|...`...|
05A0: 03 29 7F F0 30 A5 23 29  80 85 05 A5 23 29 7F 85  |.)..0.#)....#)..|
05B0: 23 A5 03 29 7F 85 03 A5  23 C5 03 90 1D D0 06 A5  |#..)....#.......|
05C0: 22 C5 02 90 15 20 F2 0C  85 22 86 23 A5 23 29 7F  |".... ...".#.#).|
05D0: 85 23 4C B8 0D A9 00 A2  00 60 A5 23 05 05 AA A5  |.#L......`.#....|
05E0: 22 60 48 8A 49 80 AA 68  60 A5 23 45 03 30 26 A5  |"`H.I..h`.#E.0&.|
05F0: 23 30 11 A5 23 C5 03 90  1C D0 1F A5 22 C5 02 90  |#0..#......."...|
0600: 14 4C 1B 0E A5 03 C5 23  90 0B D0 0E A5 02 C5 22  |.L.....#......."|
0610: 90 03 4C 1B 0E A9 01 4C  1D 0E A9 00 60 A5 22 C5  |..L....L....`.".|
0620: 02 D0 09 A5 23 C5 03 D0  03 A9 01 60 20 EA 0D 60  |....#......` ..`|
0630: 20 1E 0E 49 01 60 20 EA  0D 49 01 60 A5 22 C5 02  | ..I.` ..I.`."..|
0640: D0 09 A5 23 C5 03 D0 03  A9 01 60 A9 00 60 20 3D  |...#......`..` =|
0650: 0E 49 01 60 C9 00 D0 05  A9 00 A2 00 60 85 22 A2  |.I.`........`.".|
0660: 00 A0 16 A5 22 29 80 D0  0C 06 22 88 C0 00 D0 F3  |....")....".....|
0670: A9 00 A2 00 60 98 0A 0A  AA A5 22 29 7F 4A 4A 4A  |....`.....").JJJ|
0680: 85 02 8A 05 02 AA A5 22  0A 0A 0A 60 85 22 86 23  |......."...`.".#|
0690: 05 23 D0 05 A9 00 A2 00  60 A0 1E A5 23 29 80 D0  |.#......`...#)..|
06A0: 0E 06 22 26 23 88 C0 00  D0 F1 A9 00 A2 00 60 98  |.."&#.........`.|
06B0: 0A 0A 85 02 A5 23 29 60  4A 4A 4A 4A 4A 05 02 AA  |.....#)`JJJJJ...|
06C0: A5 23 29 1F 0A 0A 0A 85  02 A5 22 4A 4A 4A 4A 4A  |.#)......."JJJJJ|
06D0: 05 02 60 85 22 86 23 8A  4A 4A 29 1F C9 0F B0 03  |..`.".#.JJ).....|
06E0: A9 00 60 38 E9 0F A8 C0  08 90 03 A9 FF 60 A5 23  |..`8.........`.#|
06F0: 29 03 09 04 85 02 C0 00  F0 05 06 02 88 D0 FB A5  |)...............|
0700: 02 60 85 22 86 23 8A 4A  4A 29 1F 85 FD C9 0F B0  |.`.".#.JJ)......|
0710: 05 A9 00 A2 00 60 A5 23  29 03 09 04 85 03 A5 22  |.....`.#)......"|
0720: 85 02 A5 FD C9 19 B0 12  A9 19 38 E5 FD A8 C0 00  |..........8.....|
0730: F0 23 46 03 66 02 88 4C  2F 0F A5 FD 38 E9 19 A8  |.#F.f..L/...8...|
0740: C0 06 90 05 A9 FF A2 FF  60 C0 00 F0 08 06 02 26  |........`......&|
0750: 03 88 4C 4A 0F A5 02 A6  03 60 85 22 86 23 05 23  |..LJ.....`.".#.#|
0760: D0 05 A9 00 A2 00 60 A5  23 29 80 85 05 10 11 A5  |......`.#)......|
0770: 22 49 FF 18 69 01 85 22  A5 23 49 FF 69 00 85 23  |"I..i..".#I.i..#|
0780: A0 1A A5 23 29 80 D0 0E  06 22 26 23 88 C0 00 D0  |...#)...."&#....|
0790: F1 A9 00 A2 00 60 98 0A  0A 85 02 A5 23 29 60 4A  |.....`......#)`J|
07A0: 4A 4A 4A 4A 05 02 05 05  AA A5 23 29 1F 0A 0A 0A  |JJJJ......#)....|
07B0: 85 02 A5 22 4A 4A 4A 4A  4A 05 02 60 85 22 86 23  |..."JJJJJ..`.".#|
07C0: 8A 29 80 85 05 A5 23 4A  4A 29 1F C9 0B B0 05 A9  |.)....#JJ)......|
07D0: 00 A2 00 60 C9 1B 90 0E  A5 05 30 05 A9 FF A2 7F  |...`......0.....|
07E0: 60 A9 00 A2 80 60 38 E9  0B A8 A5 23 29 03 09 04  |`....`8....#)...|
07F0: 85 03 A5 22 85 02 C0 00  F0 07 06 02 26 03 88 D0  |..."........&...|
0800: F9 A5 05 10 11 A5 02 49  FF 18 69 01 85 02 A5 03  |.......I..i.....|
0810: 49 FF 69 00 85 03 A5 02  A6 03 60 A9 00 85 02 20  |I.i.......`.... |
0820: CF FF C9 0D F0 0C A4 02  99 00 C1 C8 84 02 C0 FF  |................|
0830: 90 ED A4 02 A9 00 99 00  C1 A9 00 A2 C1 60 A9 FF  |.............`..|
0840: 8D 0E D4 8D 0F D4 A9 80  8D 12 D4 AD 1B D4 4D 04  |..............M.|
0850: DC 4D 12 D0 85 06 AD 1B  D4 4D 05 DC 85 07 05 06  |.M.......M......|
0860: D0 08 A9 AC 85 06 A9 E1  85 07 60 A5 06 0A 26 07  |..........`...&.|
0870: 90 02 49 2D 85 06 4D 1B  D4 60 20 6C 10 4A 4A 4A  |..I-..M..` l.JJJ|
0880: 4A A2 00 60 20 B8 10 A9  0A 8D 00 C0 A9 14 8D 01  |J..` ...........|
0890: C0 AD 00 C0 48 AD 01 C0  85 22 68 18 65 22 8D 02  |....H...."h.e"..|
08A0: C0 A9 E8 A2 03 8D 03 C0  8E 04 C0 AD 02 C0 20 1F  |.............. .|
08B0: 08 A9 0D 20 D2 FF 60 20  3F 10 60                 |... ..` ?.`|
