programming-language/workspace/compiler/tests/snapshots/snapshots_test__error_syntax_missing_colon.snap
---
source: tests/snapshots_test.rs
expression: error
---
error[E100]: Expected ':' before function body, found NEWLINE
  --> syntax_missing_colon.cb64:2:11
  |
2 | def main()
  |
