programming-language/workspace/compiler/tests/snapshots/snapshots_test__lexer_all_literals.snap
---
source: tests/snapshots_test.rs
expression: format_tokens(&tokens)
---
Newline @ 19..20
Def @ 20..23
Identifier("main") @ 24..28
LeftParen @ 28..29
RightParen @ 29..30
Colon @ 30..31
Newline @ 31..32
Indent @ 32..36
Identifier("dec") @ 36..39
Colon @ 39..40
Byte @ 41..45
Equal @ 46..47
Integer(42) @ 48..50
Newline @ 70..71
Identifier("hex") @ 75..78
Colon @ 78..79
Byte @ 80..84
Equal @ 85..86
Integer(255) @ 87..90
Newline @ 90..91
Identifier("bin") @ 95..98
Colon @ 98..99
Byte @ 100..104
Equal @ 105..106
Integer(170) @ 107..116
Newline @ 116..117
Newline @ 137..138
Identifier("big") @ 142..145
Colon @ 145..146
Word @ 147..151
Equal @ 152..153
Integer(1000) @ 154..158
Newline @ 158..159
Identifier("hex_word") @ 163..171
Colon @ 171..172
Word @ 173..177
Equal @ 178..179
Integer(43981) @ 180..185
Newline @ 185..186
Newline @ 209..210
Identifier("yes") @ 214..217
Colon @ 217..218
Bool @ 219..223
Equal @ 224..225
True @ 226..230
Newline @ 230..231
Identifier("no") @ 235..237
Colon @ 237..238
Bool @ 239..243
Equal @ 244..245
False @ 246..251
Newline @ 251..252
Newline @ 274..275
Identifier("println") @ 279..286
LeftParen @ 286..287
String("STRING") @ 287..295
RightParen @ 295..296
Newline @ 296..297
Identifier("c") @ 301..302
Colon @ 302..303
Byte @ 304..308
Equal @ 309..310
Char('A') @ 311..314
Newline @ 314..315
Dedent @ 315..315
