programming-language/workspace/compiler/tests/snapshots/snapshots_test__lexer_minimal.snap
---
source: tests/snapshots_test.rs
expression: format_tokens(&tokens)
---
Def @ 24..27
Identifier("main") @ 28..32
LeftParen @ 32..33
RightParen @ 33..34
Colon @ 34..35
Newline @ 35..36
Indent @ 36..40
Pass @ 40..44
Newline @ 44..45
Dedent @ 45..45
