programming-language/workspace/compiler/tests/snapshots/snapshots_test__lexer_operators.snap
---
source: tests/snapshots_test.rs
expression: format_tokens(&tokens)
---
Def @ 16..19
Identifier("main") @ 20..24
LeftParen @ 24..25
RightParen @ 25..26
Colon @ 26..27
Newline @ 27..28
Indent @ 28..32
Identifier("a") @ 32..33
Colon @ 33..34
Byte @ 35..39
Equal @ 40..41
Integer(10) @ 42..44
Newline @ 44..45
Identifier("b") @ 49..50
Colon @ 50..51
Byte @ 52..56
Equal @ 57..58
Integer(3) @ 59..60
Newline @ 60..61
Identifier("add") @ 83..86
Colon @ 86..87
Byte @ 88..92
Equal @ 93..94
Identifier("a") @ 95..96
Plus @ 97..98
Identifier("b") @ 99..100
Newline @ 100..101
Identifier("sub") @ 105..108
Colon @ 108..109
Byte @ 110..114
Equal @ 115..116
Identifier("a") @ 117..118
Minus @ 119..120
Identifier("b") @ 121..122
Newline @ 122..123
Identifier("mul") @ 127..130
Colon @ 130..131
Byte @ 132..136
Equal @ 137..138
Identifier("a") @ 139..140
Star @ 141..142
Identifier("b") @ 143..144
Newline @ 144..145
Identifier("div") @ 149..152
Colon @ 152..153
Byte @ 154..158
Equal @ 159..160
Identifier("a") @ 161..162
Slash @ 163..164
Identifier("b") @ 165..166
Newline @ 166..167
Identifier("mod") @ 171..174
Colon @ 174..175
Byte @ 176..180
Equal @ 181..182
Identifier("a") @ 183..184
Percent @ 185..186
Identifier("b") @ 187..188
Newline @ 188..189
Identifier("eq") @ 211..213
Colon @ 213..214
Bool @ 215..219
Equal @ 220..221
Identifier("a") @ 222..223
EqualEqual @ 224..226
Identifier("b") @ 227..228
Newline @ 228..229
Identifier("ne") @ 233..235
Colon @ 235..236
Bool @ 237..241
Equal @ 242..243
Identifier("a") @ 244..245
BangEqual @ 246..248
Identifier("b") @ 249..250
Newline @ 250..251
Identifier("lt") @ 255..257
Colon @ 257..258
Bool @ 259..263
Equal @ 264..265
Identifier("a") @ 266..267
Less @ 268..269
Identifier("b") @ 270..271
Newline @ 271..272
Identifier("gt") @ 276..278
Colon @ 278..279
Bool @ 280..284
Equal @ 285..286
Identifier("a") @ 287..288
Greater @ 289..290
Identifier("b") @ 291..292
Newline @ 292..293
Identifier("le") @ 297..299
Colon @ 299..300
Bool @ 301..305
Equal @ 306..307
Identifier("a") @ 308..309
LessEqual @ 310..312
Identifier("b") @ 313..314
Newline @ 314..315
Identifier("ge") @ 319..321
Colon @ 321..322
Bool @ 323..327
Equal @ 328..329
Identifier("a") @ 330..331
GreaterEqual @ 332..334
Identifier("b") @ 335..336
Newline @ 336..337
Identifier("land") @ 356..360
Colon @ 360..361
Bool @ 362..366
Equal @ 367..368
True @ 369..373
And @ 374..377
False @ 378..383
Newline @ 383..384
Identifier("lor") @ 388..391
Colon @ 391..392
Bool @ 393..397
Equal @ 398..399
True @ 400..404
Or @ 405..407
False @ 408..413
Newline @ 413..414
Identifier("lnot") @ 418..422
Colon @ 422..423
Bool @ 424..428
Equal @ 429..430
Not @ 431..434
True @ 435..439
Newline @ 439..440
Identifier("band") @ 459..463
Colon @ 463..464
Byte @ 465..469
Equal @ 470..471
Identifier("a") @ 472..473
Ampersand @ 474..475
Identifier("b") @ 476..477
Newline @ 477..478
Identifier("bor") @ 482..485
Colon @ 485..486
Byte @ 487..491
Equal @ 492..493
Identifier("a") @ 494..495
Pipe @ 496..497
Identifier("b") @ 498..499
Newline @ 499..500
Identifier("bxor") @ 504..508
Colon @ 508..509
Byte @ 510..514
Equal @ 515..516
Identifier("a") @ 517..518
Caret @ 519..520
Identifier("b") @ 521..522
Newline @ 522..523
Identifier("bnot") @ 527..531
Colon @ 531..532
Byte @ 533..537
Equal @ 538..539
Tilde @ 540..541
Identifier("a") @ 541..542
Newline @ 542..543
Identifier("shl") @ 547..550
Colon @ 550..551
Byte @ 552..556
Equal @ 557..558
Identifier("a") @ 559..560
ShiftLeft @ 561..563
Integer(1) @ 564..565
Newline @ 565..566
Identifier("shr") @ 570..573
Colon @ 573..574
Byte @ 575..579
Equal @ 580..581
Identifier("a") @ 582..583
ShiftRight @ 584..586
Integer(1) @ 587..588
Newline @ 588..589
Dedent @ 589..589
